# LaserScan-Debug

./: CMakeLists.txt  DP_CONSTRAINTS.md  DP_TEST_SCENARIOS.md  README.md  point3d.txt  points3d_0 - Cloud-plane2.txt  points3d_0 - Cloud-plane3.txt  手持算法调研.md
calib_info/: laser_calib.yml  stereo_calib.yml
calib_info_0730/: quad_surface.yml
calib_info_0731/: quad_surface.yml  stereo_calib.yml
calib_info_0807/: quad_surface.yml  stereo_calib.yml
calib_info_0813/: quad_surface.yml  stereo_calib.yml
edge_check/: main.py
include/: configer.h  laser.h  main.h  match.h  twopass.h  type.h
python_view/: circle_detect.py  edge_check.py  fast_edge_check_1.py  fast_edge_check_2.py  pts3_clean.py  pts3_fliter_3method.py
src/: laser.cpp  main.cpp  match.cpp
问题合集/点距离阈值取舍/calib_info_1013/: quad_surface.yml  stereo_calib.yml
